# Krypton

./: Cargo.toml
vault-core/: Cargo.toml
vault-core/src/: error.rs  lib.rs  models.rs  traits.rs
vault-crypto/: Cargo.toml
vault-crypto/src/: lib.rs
vault-ext/: Cargo.toml
vault-ext/src/: lib.rs  registry.rs
vault-service/: Cargo.toml
vault-service/src/: lib.rs
vault-store/: Cargo.toml
vault-store/src/: lib.rs  sqlite.rs
vault-tui/: Cargo.toml
vault-tui/src/: actions.rs  app.rs  config.rs  events.rs  main.rs
vault-tui/src/views/: entry_detail.rs  entry_edit.rs  entry_list.rs  help.rs  mod.rs  search.rs  settings.rs  unlock.rs
