[workspace]
members = [
    "vault-core",
    "vault-crypto",
    "vault-store",
    "vault-ext",
    "vault-service",
    "vault-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
vault-core    = { path = "vault-core" }
vault-crypto  = { path = "vault-crypto" }
vault-store   = { path = "vault-store" }
vault-ext     = { path = "vault-ext" }
vault-service = { path = "vault-service" }

uuid             = { version = "1",    features = ["v4", "serde"] }
chrono           = { version = "0.4",  features = ["serde"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
secrecy          = { version = "0.8", features = ["serde"] }
zeroize          = { version = "1", features = ["derive"] }
async-trait      = "0.1"
tokio            = { version = "1",    features = ["full"] }
argon2           = "0.5"
chacha20poly1305 = "0.10"
rand             = "0.8"
rusqlite         = { version = "0.31", features = ["bundled"] }
ratatui          = "0.29"
crossterm        = "0.28"
arboard          = "3"
dirs             = "5"
color-eyre       = "0.6"
